load("@io_bazel_rules_go//go:def.bzl", "gazelle", "go_binary", "go_library", "go_prefix")

gazelle(
    name = "gazelle",
    external = "vendored",
    prefix = "github.com/dlorenc/bazel-cache-gcs",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/dlorenc/bazel-cache-gcs",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/cloud.google.com/go/storage:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_binary(
    name = "bazel-cache-gcs",
    importpath = "github.com/dlorenc/bazel-cache-gcs",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

go_prefix("github.com/dlorenc/bazel-cache-gcs")
